force-app/main/default/objects/PO_Matrix__c/PO_Matrix__c.object-meta.xml
<CustomObject>
    <label>PO Matrix</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>PO Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>