force-app/main/default/objects/PO_Matrix__c/fields/Point_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact__c</fullName>
    <label>Point Of Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>