force-app/main/default/objects/PO_Matrix__c/fields/QuicklookId__c.field-meta.xml
<CustomField>
    <fullName>QuicklookId__c</fullName>
    <label>QuicklookId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>